# conor-advent-of-code

./: .gitignore  CMakeLists.txt  conanfile.py
src/: main.cpp
src/include/year-2025/: day-2.hpp  day-6.hpp  day-7.hpp  day-9.hpp
src/year-2025/: CMakeLists.txt
src/year-2025/day-1/: CMakeLists.txt  day-1.cpp
src/year-2025/day-1/include/: day-1.hpp
src/year-2025/day-1/unit_tests/: CMakeLists.txt
src/year-2025/day-2/: CMakeLists.txt  day-2.cpp
src/year-2025/day-2/include/: invalid-ids.hpp
src/year-2025/day-2/unit_tests/: CMakeLists.txt  test_invalid_ids.cpp
src/year-2025/day-3/: CMakeLists.txt  day-3.cpp
src/year-2025/day-3/include/: day-3.hpp
src/year-2025/day-3/unit_tests/: CMakeLists.txt
src/year-2025/day-4/: CMakeLists.txt  day-4.cpp
src/year-2025/day-4/include/: day-4.hpp
src/year-2025/day-4/unit_tests/: CMakeLists.txt
src/year-2025/day-6/: CMakeLists.txt  day-6.cpp
src/year-2025/day-6/unit_tests/: CMakeLists.txt
src/year-2025/day-7/: CMakeLists.txt  day-7.cpp
src/year-2025/day-7/unit_tests/: CMakeLists.txt
src/year-2025/day-9/: CMakeLists.txt  day-9.cpp
src/year-2025/day-9/include/: movie_theatre.hpp
src/year-2025/day-9/unit_tests/: CMakeLists.txt  test_movie_theatre.cpp
